2004-05-28  Derek Price  <derek@ximbiot.com>

	* main.c (format_time_t, gm_format_time_t): Use my_strftime from
	GNULIB rather than the system-dependant strftime.

2004-05-20  Derek Price  <derek@ximbiot.com>

	* sanity.sh: s/GMT/UTC/ where appropriate.

2004-05-20  Derek Price  <derek@ximbiot.com>

	* server.c (cvs_output_tagged): Move new server code inside a
	SERVER_SUPPORT block.

2004-05-19  Derek Price  <derek@ximbiot.com>

	* cvs.h (gmformat_time_t, entries_time, unix_time_stamp): New protos.
	* ls.c (struct long_format_data): New structure.
	(ls_print): Print datetimes using cvs_output_tagged.
	(long_format_data_delproc): New function.
	(ls_fileproc, ls_direntproc): Keep track of long_format_data.
	* main.c (Make_Date): Use standard quotes.
	(format_time_t, gmformat_time_t): New functions.
	(format_date_alloc): Use new functions.  Improve comments.
	* server.c (cvs_output_tagged): Only output in localtime in local mode.
	* vers_ts.c (entries_time, unix_time_stamp): New functions.
	(time_stamp): Use new functions.
	* sanity.sh (ls, branches2): Use $ISO8601DATE where applicable.

2004-05-19  Derek Price  <derek@ximbiot.com>

	Output `cvs log' times in the local timezone.

	* client.c (handle_mt): Handle the new "date" MT response
	* server.c (cvs_output_tagged): Likewise
	* cvs.h: Proto for format_date_alloc
	* main.c (format_date_alloc, tm_diff): Added.
	* log.c (log_version): Use MT response to tag date output.
	(Original patch from Bart Robinson <lomew@pobox.com>.)

	* sanity.sh (importc, rcs, rcs4): Use TZ=GMT for the duration of these
	tests to obtain consistent times in output.
	(ISO8601DATE, ISO8601DATE1971, ISO8601DATE2034): Use more precise
	regex.

2004-05-19  Derek Price  <derek@ximbiot.com>

	* server.c (serve_unchanged, serve_is_modified): Overwrite existing
	data in timefields.  Fixes CAN-2004-0396.

2004-05-15  Derek Price  <derek@ximbiot.com>

	* lock.c (Lock_Cleanup), rcs.c (rcs_cleanup), server.c