@@ -1,3 +1,9 @@
+2004-06-04  Larry Jones  <lawrence.jones@ugsplm.com>
+
+	* subr.c (increment_revnum): Rewrite ala RCS to work directly on
+	the string rather than converting to int to avoid overflow.
+	* sanity.sh (basica): New tests for above, update others to match.
+
 2004-05-28  Derek Price  <derek@ximbiot.com>
 
 	* main.c (format_time_t, gm_format_time_t): Use my_strftime from
